--- a/hangman/data/settings.json
+++ b/hangman/data/settings.json
@@ -1,1 +1,1 @@
-{"resolution": [800, 600], "wide_screen": false, "fullscreen": false, "sound_volume": 60, "music_volume": 20, "play_sound": true, "play_music": true, "language": "polish"}
+{"resolution": [800, 600], "wide_screen": false, "fullscreen": false, "sound_volume": 60, "music_volume": 20, "play_sound": true, "play_music": true, "language": "english"}
